--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -3,6 +3,7 @@
 FIXME todo: create parsim/ (and nedxml/?) subdirectories here
 std::string for info() and fullPath()
 cMessage: change prio() from int to short (2 bytes less)
+add deleteGate()
 
 2004-05-10   Andras Varga
 
