--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-26  Andras Varga
+
+	* opp_msgc: prohibit using cObject fields in structs and non-cObject
+	classes (ownership issues)
+
 2004-05-16  Andras Varga
 
 	* opp_msgc: fixed two bugs introduced since 2.3p1
