--- a/src/sim/parsim/ChangeLog
+++ b/src/sim/parsim/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-26  Andras Varga
+
+	* cnosynchronization.cc: added ev.printf() if there's no local event
+
 2004-05-15  ------ omnetpp-3.0a4 released ------
 
 2004-03-22  ------ omnetpp-3.0a3 released ------
