--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,5 @@
+2004-06-07  ------ omnetpp-3.0a5 released ------
+
 2004-05-15  ------ omnetpp-3.0a4 released ------
 
 Remaining issue: gate directions not observed in Conn Props dialog.
