--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,5 @@
+2004-06-07  ------ omnetpp-3.0a5 released ------
+
 2004-05-27  Andras Varga
 
 	* opp_msgc: generates netPack()/netUnpack() for parallel simulation
