--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,5 @@
+2004-06-07  ------ omnetpp-3.0a5 released ------
+
 2004-06-07  Andras Varga
 
 	* cppgenerator.cc: wrong C++ code was generated for "const" parameters
