--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -1,3 +1,5 @@
+2004-06-07  ------ omnetpp-3.0a5 released ------
+
 2004-05-31  Andras Varga
 
 	* These sources are neither maintained nor included into the toplevel
