--- a/src/sim/parsim/ChangeLog
+++ b/src/sim/parsim/ChangeLog
@@ -1,3 +1,5 @@
+2004-06-07  ------ omnetpp-3.0a5 released ------
+
 2004-05-26  Andras Varga
 
 	* cnosynchronization.cc: added ev.printf() if there's no local event
