--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-24
+
+	* several files: added support for "xml" NED parameter type
+
 2004-06-07  ------ omnetpp-3.0a5 released ------
 
 2004-06-07  Andras Varga
