--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-24  Andras Varga
+
+	* cpar.cc: implemented support for type M (XML element) in cPar.
+
+2004-06-22  Andras Varga
+
+	* added cxmlelement.cc
+
 2004-06-07  ------ omnetpp-3.0a5 released ------
 
 2004-05-15  ------ omnetpp-3.0a4 released ------
