--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-21   Andras Varga
+
+	* visitor.cc/h: converted pattern matching to use new cPatternMatcher.
+
 2004-06-07  ------ omnetpp-3.0a5 released ------
 
 2004-05-15  ------ omnetpp-3.0a4 released ------
