--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -20,7 +20,7 @@ accidentally opening thousand windows with objects of identical names
 TODO: Need display string option to turn off module labels
 TODO: need <Copy> icon on module output window toolbars
 TODO: treeview into each object inspector!
-TODO: BUSY cursor!!! at network setup, callfinish, etc
+TODO: BUSY cursor!!! at network setup, callfinish, inspector refresh,etc
 TODO: needed function: "express run until next event in this module"
 TODO: needed new mode: express run for other modules, fast/normal for this module
 FIXME: container inspector listboxes: always prints "0 objects"
