--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-05   Andras Varga
+
+	* csimplemodule.cc: recordScalar() functions for text and cStatistic 
+	data removed. A cStatistic object can be recorded into the scalar file 
+	by calling its recordScalar() method (below).
+
+	* cstat.cc: added recordScalar() method.
+
 2004-06-24  Andras Varga
 
 	* cpar.cc: implemented support for type M (XML element) in cPar.
