--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -1,6 +1,17 @@
+2004-07-10  Andras Varga
+
+	* cmdenv.cc/h: now it's possible to control which modules' ev<< output
+	Cmdenv prints when run with express-mode=false and module-messages=
+	true. The configuration is: [Cmdenv]/<modulepath>.ev-output=true/false.
+	An example which enables only output from modules named "tcpdump":
+	  [Cmdenv]
+	  module-messages=true
+	  **.tcpdump.ev-output=true
+	  **.ev-output=false
+
 2004-07-06  Andras Varga
 
-	* cmdenv.cc: fixed Speedometer usage; added milliseconds to elapsed 
+	* cmdenv.cc: fixed Speedometer usage; added milliseconds to elapsed
 	time. FIXME calculated + speedometer values don't correspond because
 	the two call ftime() independently
 
@@ -15,27 +26,25 @@
 FIXME todo: print event banner when simulation stops (esp with express mode),
 otherwise one doesn't know total duration and number of processed events!
 
-2004-02-23  Andras Varga 
+2004-02-23  Andras Varga
 
 	* cmdenv.cc: new omnetpp.ini option:
 	    event-banner-details= true/false (default: false).
 	It is in effect with normal mode (express-mode=false), and causes
-        elapsed time and number of messages (created,present, in FES) to be 
+        elapsed time and number of messages (created,present, in FES) to be
         printed in a second line below the event banner. Format:
-           Elapsed: 131s (2m 11s)   Clock: 131830   Messages: created: 45  
-           present: 45  in FES: 18
-        Clock is the value returned by the clock() C function (in "ticks").
+           Elapsed: 131s (2m 11s)  Messages: created: 45 present: 45 in FES: 18
         Also changed the format of elapsed time display in express mode:
         prints it in seconds as well.
 
-2004-02-11  Andras Varga 
+2004-02-11  Andras Varga
 
 	* cmdenv.cc: propagated semantic change in getNextEvent()'s and
 	selectNextModule()'s return value (see include/ChangeLog)
 
 2004-02-05  Andras Varga
 
-	* heap.cc made disabled by default (and has to be explicitly enabled 
+	* heap.cc made disabled by default (and has to be explicitly enabled
 	by defining USE_CMDENV_HEAPDEBUG), and changed to throw std::alloc
 	on out-of-memory condition.
 
@@ -47,7 +56,7 @@ otherwise one doesn't know total duration and number of processed events!
 
 2003-12-11  Andras Varga
 
-	* all files: follow changes in sim/; C-style casts replaced with 
+	* all files: follow changes in sim/; C-style casts replaced with
 	static_cast<>
 
 2003-11-13  Andras Varga
