--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-15   Andras Varga
+
+	* csimul.cc: deleteNetwork(): moved flushing event queue after deleting
+	modules (because module destructors may contain delete cancelEvent(msg)
+	calls)
+
 2004-07-10   Andras Varga
 
 	* csimul.cc,cmodule.cc,util.cc: added cSimulation::contextType() stuff
