--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-16  Andras Varga
+
+	* opp_test: added preload-ned-files=*.ned to default omnetpp.ini
+
 2004-07-12  Andras Varga
 
 	* opp_makemake.in,opp_nmakemake: fixed bug which caused .tstamp to be
