--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,5 @@
+2004-07-22  ------ omnetpp-3.0a6 released ------
+
 2004-07-20  Andras Varga
 
 	* neddoc.xsl: "NED file" pages in generated HTML now contain full
