--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,5 @@
+2004-07-22  ------ omnetpp-3.0a6 released ------
+
 2004-07-06   Andras Varga
 
 	* speedmtr.cc/h: fix: use wall clock time (ftime() call) instead of 
