--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,5 @@
+2004-07-22  ------ omnetpp-3.0a6 released ------
+
 2004-07-15   Andras Varga
 
 	* csimul.cc: deleteNetwork(): moved flushing event queue after deleting
