--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-11   Andras Varga
+
+	* cmessage.h: changed default length of cMessage to zero (was 1)
+	
 2004-07-22  ------ omnetpp-3.0a6 released ------
 
 2004-07-10   Andras Varga
