--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-12  Andras Varga
+
+	* neddocproc.pl: backslashing can be used to prevent unintentional 
+	hyperlinking of a word which is also a component (e.g. module) name.
+	That is, \IP is the same as <nohtml>IP</nohtml>: "IP" won't get hyper-
+	linked in the HTML output, even if there's a module type called IP.
+	Single backslashes will be removed from the HTML output -- double 
+	them if you want them to appear.
+
 2004-08-09  Andras Varga
 
 	* opp_neddoc.in: on Windows, listing directories which have no .ned 
