--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-16  Andras Varga
+
+	* tkutil.cc: worked around compilation error in WinSCard.h when 
+	compiling with MSVC .NET
+
 2004-08-14  Andras Varga
 
 	* tkapp.cc: new omnetpp.ini entry: [Tkenv]/bitmap-path=. Value should
