--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-16  Andras Varga
+
+	* dispstr.tcl: fix: generate only either "i=" or "b=" tag in display
+	strings (TBD gned doesn't support using "i=" and "b=" together)
+
 2004-07-27  Andras Varga
 
 	* ebnf.lex: fixed "`yytext_ptr' undeclared" error with some flex 
@@ -11,7 +16,6 @@
 
 Remaining issue: gate directions not observed in Conn Props dialog.
 when submodule has random placement, strange thing happens after OK'ing Props dialog
-GNED not compatible with new Tkenv mode of using "i=" and "b=" together
 new Tkenv display string tags not supported yet
 internally, images must be named with "img:" prefix (otherwise exit.gif, 
 proc.gif etc will overwrite the exit, proc Tcl commands!)
